--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,23 @@
-/* h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
-}*/
-/*body {
-  margin: 2em;
-  background: black;
-}*/
 
- /*
-  * See https://github.com/angular/angular.io/blob/master/public/docs/_examples/styles.css
-  * for the full set of master styles used by the documentation samples
-  */
+.nav-link {
+	font-size: 18px;
+}
+
+.nav-link.active {
+	color: lightgray !important;
+}
+
+.nav-tabs>li.active>a {
+	background: black !important;
+}
+
+
+.nav-tabs.nav-justified>li>a {
+	border-bottom-color: white !important;
+	border-bottom-width: 2px !important;
+}
+
+.nav-tabs.nav-justified>.active>a {
+	border: 2px solid white !important;
+	border-bottom-color: black !important;
+}
