--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
 .nav-tabs>li>a {
 	border: 1px solid white !important;
-	background: darkgrey !important;
+	background: #c6bcb6 !important;
 }
 
 .nav-tabs>.active>a {
