--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,16 @@
 	background: #c6bcb6 !important;
 }
 
+.nav-tabs>li>a:hover {
+	background: #96897f !important;
+}
+
 .nav-tabs>.active>a {
 	color: lightgray !important;
 	border-bottom-color: black !important;
+	background: black !important;
+}
+
+.nav-tabs>.active>a:hover {
 	background: black !important;
 }
