--- a/app/gallery/gallery.component.html
+++ b/app/gallery/gallery.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-9">
-    <carousel [interval]="defaultInterval" [noWrap]="noWrapSlides">
+    <carousel [interval]="defaultInterval * 1000" [noWrap]="noWrapSlides">
       <slide *ngFor="let image of images; let index=index"
              [active]="image.active">
         <img [src]="image.url" style="margin:auto;">
@@ -22,12 +22,8 @@
         Disable Slide Looping
       </label>
     </div>
-    
-   
-    Interval, in milliseconds: 
-      <input type="number" class="form-control" [(ngModel)]="defaultInterval">
-      <input type="range" [(ngModel)]="defaultInterval" min="0" max="5000">
-    <br/>Enter a negative number or 0 to stop the interval.
-  
+    Interval, in seconds: 
+    <input type="number" class="form-control" [(ngModel)]="defaultInterval">
+    <input type="range" [(ngModel)]="defaultInterval" min="0" max="10">  
   </div>
 </div>
