--- a/app/gallery/gallery.component.html
+++ b/app/gallery/gallery.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-9">
+
     <carousel [interval]="defaultInterval * 1000" [noWrap]="noWrapSlides">
       <slide *ngFor="let image of images; let index=index"
              [active]="image.active">
@@ -12,18 +12,13 @@
         </div>
       </slide>
     </carousel>
-  </div>
- 
-  <div class="col-md-3">
+
     <br>
-    <div class="checkbox">
-      <label>
-        <input type="checkbox" [(ngModel)]="noWrapSlides">
-        Disable Slide Looping
-      </label>
-    </div>
+  <div class="col-sm-3"></div>
+  <div class="col-sm-3">
     Interval, in seconds: 
     <input type="number" class="form-control" [(ngModel)]="defaultInterval">
-    <input type="range" [(ngModel)]="defaultInterval" min="0" max="10">  
+    <input type="range" [(ngModel)]="defaultInterval" min="0" max="10">
   </div>
-</div>
+  <div class="col-sm-3"></div>
+  </div>
