--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 }
 
 .nav-tabs>li>a {
-	border: 1px solid white !important;
+	/*border: 1px solid white !important;*/
 	background: #c6bcb6 !important;
 }
 
