add notes for resize options

--- a/app/gallery/gallery.component.html
+++ b/app/gallery/gallery.component.html
@@ -4,3 +4,6 @@
         <img [src]="image.url" style="margin:auto; height:75vh;">
       </slide>
     </carousel>
+
+
+    <!--- max-width:100%; height:auto;  will shrink but not grow beyond native size. no pixelation--->
